[gd_scene load_steps=16 format=2]

[ext_resource path="res://Robot.gd" type="Script" id=1]
[ext_resource path="res://tiles.png" type="Texture" id=2]
[ext_resource path="res://assets/shaders/colourer.shader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 3 )
shader_param/color0 = 4
shader_param/flash0 = 2
shader_param/color1 = 7
shader_param/color2 = 8

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.03013, 10.9957 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 120, 56, 20, 28 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 100, 56, 20, 28 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 80, 56, 20, 28 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 60, 56, 20, 28 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 40, 56, 20, 28 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 20, 56, 20, 28 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 0, 56, 20, 28 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "running",
"speed": 12.5
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 7 ), SubResource( 6 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": false,
"name": "check",
"speed": 12.5
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "R2L",
"speed": 12.5
}, {
"frames": [ SubResource( 3 ) ],
"loop": false,
"name": "zap",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 8 ), SubResource( 7 ), SubResource( 6 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "LRRL",
"speed": 12.5
}, {
"frames": [ SubResource( 9 ), SubResource( 8 ), SubResource( 7 ), SubResource( 6 ), SubResource( 5 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": false,
"name": "L2R",
"speed": 12.5
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 2, 84, 48, 108 )

[sub_resource type="CapsuleShape2D" id=12]
radius = 4.0
height = 41.0

[node name="Robot" type="Area2D"]
material = SubResource( 1 )
collision_layer = 8
collision_mask = 3
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 2 )

[node name="Sprite" type="Node2D" parent="."]
use_parent_material = true

[node name="AniSprite" type="AnimatedSprite" parent="Sprite"]
use_parent_material = true
position = Vector2( -1, -11 )
frames = SubResource( 10 )
animation = "check"

[node name="ray_floor" type="RayCast2D" parent="Sprite"]
position = Vector2( 7, -1 )
enabled = true
cast_to = Vector2( 0, 2 )

[node name="ray_wall" type="RayCast2D" parent="Sprite"]
position = Vector2( 6, -8 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 2 )

[node name="Electricity" type="Area2D" parent="Sprite"]
collision_layer = 8
collision_mask = 2

[node name="Sprite" type="Sprite" parent="Sprite/Electricity"]
position = Vector2( 7, -23 )
texture = SubResource( 11 )
centered = false
vframes = 9
frame = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Electricity"]
position = Vector2( 31.6488, -16.5685 )
rotation = 1.5708
shape = SubResource( 12 )
disabled = true
[connection signal="area_entered" from="." to="." method="_on_Robot_area_entered"]
[connection signal="animation_finished" from="Sprite/AniSprite" to="." method="_on_AniSprite_animation_finished"]
[connection signal="frame_changed" from="Sprite/AniSprite" to="." method="_on_AniSprite_frame_changed"]
[connection signal="area_entered" from="Sprite/Electricity" to="." method="_on_Electricity_area_entered"]
